--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 
 </head>
 <body>
-
+<header>
+    <nav class="container">
+        <h1>TEC.002-MOVIES</h1>
+        <div class = "link-container" >
+            
+        </div>
+            <img src="img/gitHub.svg" alt="">
+            <a href="https://github.com/FFabio28/">/github</a>
+        </div>
+    </nav>
+</header>
 
 </body>
 </html>
