Score.html e avaliações resolvidas

--- a/index.html
+++ b/index.html
@@ -36,8 +36,19 @@
                             <h3>
                                 Piratas do Caribe: No Fim do Mundo
                             </h3>
-                            <a class="movies-btn" href="score.html"> Avaliar
-                            </a>
+                            <div class="movies-card-description-star">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star_half.svg" alt="star">
+                                    <img src="img/star_empty.svg" alt="star">
+                                </div>
+                                <p>15 avaliações</p>
+                                <a class="movies-btn" href="score.html"> Avaliar
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -49,8 +60,19 @@
                             <h3>
                                 Vingadores: Ultimato
                             </h3>
-                            <a class="movies-btn" href="score.html"> Avaliar
-                            </a>
+                            <div class="movies-card-description-star">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star_half.svg" alt="star">
+                                    <img src="img/star_empty.svg" alt="star">
+                                </div>
+                                <p>15 avaliações</p>
+                                <a class="movies-btn" href="score.html"> Avaliar
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -62,8 +84,19 @@
                             <h3>
                                 O Hobbit: A Batalha dos Cinco Exércitos
                             </h3>
-                            <a class="movies-btn" href="score.html"> Avaliar
-                            </a>
+                            <div class="movies-card-description-star">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star_half.svg" alt="star">
+                                    <img src="img/star_empty.svg" alt="star">
+                                </div>
+                                <p>15 avaliações</p>
+                                <a class="movies-btn" href="score.html"> Avaliar
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -75,8 +108,19 @@
                             <h3>
                                 Uma noite de crime: Ano de eleição
                             </h3>
-                            <a class="movies-btn" href="score.html"> Avaliar
-                            </a>
+                            <div class="movies-card-description-star">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star_half.svg" alt="star">
+                                    <img src="img/star_empty.svg" alt="star">
+                                </div>
+                                <p>15 avaliações</p>
+                                <a class="movies-btn" href="score.html"> Avaliar
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -88,8 +132,19 @@
                             <h3>
                                 Deadpool e Wolverine
                             </h3>
-                            <a class="movies-btn" href="score.html"> Avaliar
-                            </a>
+                            <div class="movies-card-description-star">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star_half.svg" alt="star">
+                                    <img src="img/star_empty.svg" alt="star">
+                                </div>
+                                <p>15 avaliações</p>
+                                <a class="movies-btn" href="score.html"> Avaliar
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
