--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
                                 Piratas do Caribe: No Fim do Mundo
                             </h3>
                             <div class="movies-card-description-star">
-                                <h4>3.8</h4>
+                                <h4>4.0</h4>
                                 <div>
                                     <img src="img/star.svg" alt="star">
                                     <img src="img/star.svg" alt="star">
                                     <img src="img/star.svg" alt="star">
-                                    <img src="img/star_half.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
                                     <img src="img/star_empty.svg" alt="star">
                                 </div>
-                                <p>15 avaliações</p>
+                                <p>260 avaliações</p>
                                 <a class="movies-btn" href="score.html"> Avaliar
                                 </a>
                             </div>
@@ -61,15 +61,39 @@
                                 Vingadores: Ultimato
                             </h3>
                             <div class="movies-card-description-star">
-                                <h4>3.8</h4>
+                                <h4>5.0</h4>
                                 <div>
                                     <img src="img/star.svg" alt="star">
                                     <img src="img/star.svg" alt="star">
                                     <img src="img/star.svg" alt="star">
-                                    <img src="img/star_half.svg" alt="star">
-                                    <img src="img/star_empty.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
                                 </div>
-                                <p>15 avaliações</p>
+                                <p>530 avaliações</p>
+                                <a class="movies-btn" href="score.html"> Avaliar
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="card-movies">
+                        <img src="https://lh5.googleusercontent.com/HmoJ2dONuvwT9GCSM0726dx9XHRCd-T5HTdLJY5O4BbDw0w2jDVyAGclUWc3ufDq2sbCzxoP3jBFjnCrKUjNzx7WHrPkAIsXGYiA7miwPXAJrK7J5YIS95CmKoRbMhui9hSUGq8B5tWJr3muBlsO_KE"
+                            alt="">
+                        <div class="card-movies-description">
+                            <h3>
+                                Jogos Vorazes: A cantiga dos pássaros e das serpentes
+                            </h3>
+                            <div class="movies-card-description-star">
+                                <h4>4.5</h4>
+                                <div>
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star_half.svg" alt="star">
+                                </div>
+                                <p>623 avaliações</p>
                                 <a class="movies-btn" href="score.html"> Avaliar
                                 </a>
                             </div>
@@ -85,15 +109,15 @@
                                 O Hobbit: A Batalha dos Cinco Exércitos
                             </h3>
                             <div class="movies-card-description-star">
-                                <h4>3.8</h4>
+                                <h4>4.0</h4>
                                 <div>
                                     <img src="img/star.svg" alt="star">
                                     <img src="img/star.svg" alt="star">
                                     <img src="img/star.svg" alt="star">
-                                    <img src="img/star_half.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
                                     <img src="img/star_empty.svg" alt="star">
                                 </div>
-                                <p>15 avaliações</p>
+                                <p>112 avaliações</p>
                                 <a class="movies-btn" href="score.html"> Avaliar
                                 </a>
                             </div>
@@ -117,7 +141,7 @@
                                     <img src="img/star_half.svg" alt="star">
                                     <img src="img/star_empty.svg" alt="star">
                                 </div>
-                                <p>15 avaliações</p>
+                                <p>36 avaliações</p>
                                 <a class="movies-btn" href="score.html"> Avaliar
                                 </a>
                             </div>
@@ -133,20 +157,55 @@
                                 Deadpool e Wolverine
                             </h3>
                             <div class="movies-card-description-star">
-                                <h4>3.8</h4>
+                                <h4>4.0</h4>
                                 <div>
                                     <img src="img/star.svg" alt="star">
                                     <img src="img/star.svg" alt="star">
                                     <img src="img/star.svg" alt="star">
-                                    <img src="img/star_half.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
                                     <img src="img/star_empty.svg" alt="star">
                                 </div>
-                                <p>15 avaliações</p>
+                                <p>25 avaliações</p>
                                 <a class="movies-btn" href="score.html"> Avaliar
                                 </a>
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="card-movies">
+                        <img src="https://lumiere-a.akamaihd.net/v1/images/7e31d6246c6f32fbb227b4739fb5440f_da23af1f.jpeg"
+                            alt="">
+                        <div class="card-movies-description">
+                            <h3>
+                                Mufasa: O Rei Leão
+                            </h3>
+                            <div class="movies-card-description-star">
+                                <h4>Sem Avaliações</h4>
+                                <div>
+                                    <img src="img/star_empty.svg" alt="star">
+                                    <img src="img/star_empty.svg" alt="star">
+                                    <img src="img/star_empty.svg" alt="star">
+                                    <img src="img/star_empty.svg" alt="star">
+                                    <img src="img/star_empty.svg" alt="star">
+                                </div>
+                                <p>Não disponivel</p>
+                                <a class="movies-btn" href="score.html"> Indisponivel
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="movies-pagination-container">
+                <div class="movies-pagination-box">
+                    <button disabled>
+                        <img src="img/arrow.svg" alt="Voltar">
+                    </button>
+                    <p>1 de 15</p>
+                    <button>
+                        <img class="movies-button-flip" src="img/arrow.svg" alt="Avançar">
+                    </button>
                 </div>
             </div>
         </section>
